# Hololink

./: README.md  pyproject.toml
hololink_project/: manage.py
hololink_project/hololink_app/: apps.py  models.py  views.py
hololink_project/hololink_app/migrations/: 0001_initial.py
hololink_project/hololink_app/templates/: frontpage.html
hololink_project/hololink_project/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
notebook/: youtube_api_test.ipynb
src/: flask_main.py
src/templates/: index.html
